--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sass-export",
-  "version": "0.0.10",
-  "description": "Exports Sass files to Json format",
+  "version": "0.1.0",
+  "description": "Exports Sass files to Json format, and manage section with annotations",
   "main": "./dist/index.js",
   "files": [
     "bin",
@@ -17,9 +17,11 @@
   },
   "keywords": [
     "Sass",
+    "Scss",
+    "Sass annotations",
     "Sass to JS",
     "Json",
-    "Sass-toJson",
+    "Sass-to-Json",
     "sass variables",
     "Node"
   ],
