--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sass-export",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Exports Sass files to Json format, able to manage sections with annotations in comments.",
   "main": "./dist/index.js",
   "files": [
@@ -35,6 +35,7 @@
   },
   "license": "ISC",
   "dependencies": {
+    "glob": "^7.1.2",
     "minimist": "^1.2.0",
     "node-sass": "^4.5.2"
   },
