run on supported node versions

--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "watch": "npm run build -- --watch",
     "test": "TS_NODE_FILES=true  mocha -r ts-node/register src/**/*.test.ts"
   },
+  "engines": {
+    "node": ">=10"
+  },
   "keywords": [
     "Sass",
     "Sass Utilities",
