--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: node_js
 node_js:
-- '6.10.2'
-- '7'
-- '8'
-- 'stable'
+  - "10"
+  - "12"
+  - "14"
+  - "stable"
 before_install:
-- npm install -g typescript
+  - npm install -g typescript
 script:
-- npm test
+  - npm test
