--- a/package.json
+++ b/package.json
@@ -40,20 +40,20 @@
   "dependencies": {
     "glob": "^7.1.6",
     "minimist": "^1.2.5",
-    "sass": "^1.32.8"
+    "node-sass": "^5.0"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/plentycode/sass-export.git"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.15",
-    "@types/mocha": "^8.2.1",
-    "@types/node": "^14.14.31",
-    "@types/sass": "^1.16",
-    "chai": "^4.3.0",
-    "mocha": "^8.3.0",
+    "@types/chai": "^4.2.14",
+    "@types/mocha": "^8.2.0",
+    "@types/node": "^14.14.21",
+    "@types/node-sass": "^4.11.1",
+    "chai": "^4.2.0",
+    "mocha": "^8.2.1",
     "ts-node": "^9.1.1",
-    "typescript": "^4.2.2"
+    "typescript": "^4.1.3"
   }
 }
