--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "tsc --p tsconfig.json",
     "dev": "npm run build & npm run test",
     "prepublish": "npm run build",
-    "prestart": "npm run build",
+    "postinstall": "npm run build",
     "watch": "npm run build -- --watch",
     "test": "mocha -r ts-node/register src/**/*.test.ts"
   },
