--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Exports Sass files to Json format, able to manage sections with annotations in comments.",
   "main": "./dist/index.js",
   "files": [
+    "src",
     "bin",
     "dist"
   ],
@@ -11,6 +12,7 @@
     "build": "tsc --p tsconfig.json",
     "dev": "npm run build & npm run test",
     "prepublish": "npm run build",
+    "postinstall": "npm run build",
     "watch": "npm run build -- --watch",
     "test": "mocha -r ts-node/register src/**/*.test.ts"
   },
