--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "sass-export",
-  "version": "1.0.6",
+  "name": "zhf.sass-export",
+  "version": "1.0.0",
   "description": "Exports Sass files to Json format, able to manage sections with annotations in comments.",
   "main": "./dist/index.js",
   "files": [
